# wallet-microservice/src/main/java/com/nttdata/walletmicroservice/response/ClientResponse.java
@@ -1,0 +1,25 @@
+package com.nttdata.walletmicroservice.response;
+
+
+import lombok.*;
+
+@Getter
+@Setter
+@NoArgsConstructor
+@AllArgsConstructor
+@Builder
+public class ClientResponse {
+
+    private String idClient;
+
+
+    private String name;
+
+
+    private String surnames;
+
+
+    private String dni;
+
+    private String clientType;
+}
